tests/snapshots/run_wpt_conformance__litert_batchNormalization_float16_4D_NCHW_tensor_options_scale.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 64
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
batch_normalization.https.any.js batchNormalization float16 4D NCHW tensor options.scale, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: BatchNormalization { input: 0, mean: 1, variance: 3, options: Some(MLBatchNormalizationOptions { label: "", scale: Some(2), bias: None, axis: 1, epsilon: 1e-5 }), outputs: [4] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    bnInput: f16[2, 3, 2, 2];
  }

  consts {
    operand_1: f16[3] @bytes([116, 82, 54, 86, 2, 214]);
    operand_2: f16[3] @bytes([24, 84, 112, 212, 146, 197]);
    operand_3: f16[3] @bytes([157, 79, 102, 85, 158, 84]);
  }

  nodes {
    [bnOutput] = batchNormalization(bnInput, operand_1, operand_3, axis=1, bias=null, epsilon=0.00001, label="", scale=2);
  }

  outputs { bnOutput; }
}
