tests/snapshots/run_wpt_conformance__litert_batchNormalization_float16_4D_NHWC_tensor_options_axis_3.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 64
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
batch_normalization.https.any.js batchNormalization float16 4D NHWC tensor options.axis=3, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: BatchNormalization { input: 0, mean: 1, variance: 2, options: Some(MLBatchNormalizationOptions { label: "", scale: None, bias: None, axis: 3, epsilon: 1e-5 }), outputs: [3] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    bnInput: f16[2, 2, 2, 3];
  }

  consts {
    operand_1: f16[3] @bytes([116, 82, 54, 86, 2, 214]);
    operand_2: f16[3] @bytes([157, 79, 102, 85, 158, 84]);
  }

  nodes {
    [bnOutput] = batchNormalization(bnInput, operand_1, operand_2, axis=3, bias=null, epsilon=0.00001, label="", scale=null);
  }

  outputs { bnOutput; }
}
