tests/snapshots/run_wpt_conformance__litert_batchNormalization_float16_5D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 64
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
batch_normalization.https.any.js batchNormalization float16 5D tensor default options, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: BatchNormalization { input: 0, mean: 1, variance: 2, options: Some(MLBatchNormalizationOptions { label: "", scale: None, bias: None, axis: 1, epsilon: 1e-5 }), outputs: [3] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    bnInput: f16[6, 1, 1, 2, 2];
  }

  consts {
    operand_1: f16[1] @bytes([109, 80]);
    operand_2: f16[1] @bytes([30, 81]);
  }

  nodes {
    [bnOutput] = batchNormalization(bnInput, operand_1, operand_2, axis=1, bias=null, epsilon=0.00001, label="", scale=null);
  }

  outputs { bnOutput; }
}
