tests/snapshots/run_wpt_conformance__litert_batchNormalization_float32_1D_tensor_options_axis_0.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "batch_normalization.https.any.js",
    "batchNormalization float32 1D tensor options.axis=0",
    "litert",
    "PASS",
)
